implementing feature request [JPPF-23 Web based administration console] - added server statistics page